Wed Jan 31 13:31:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Removed obsolete checks for environment macros

        * ace/Recycable.h:
          Removed empty brief doxygen tag

        * ace/OS_NS_unistd.inl:
        * ace/config-rtems.h:
          Renamed ACE_HAS_BROKEN_SZ_PAGESIZE to ACE_HAS_NOTSUP_SC_PAGESIZE

Wed Jan 31 13:21:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_hpux_gcc.GNU:
          Added improvement for GCC on HPUX IA64

Wed Jan 31 10:17:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_hpux_gcc.GNU:
          Improved support for GCC on HPUX IA64

Wed Jan 31 07:50:44 UTC 2007  Krishnakumar B  <kitty@nospam.invalid.domain>

        * ace/OS_NS_Thread.cpp (ACE_OS::sched_params):  Check if the
          ACE_id_t id that is being passed in is equal to ACE_SELF.  If
          so, pass ::GetCurrentProcessId() to ::OpenProcess() instead of
          id.  ACE_SELF is defined to be 0 on ACE_WIN32; process id 0 is
          the zero-page process, and we certainly don't want to attempt to
          set it to REALTIME_PRIORITY_CLASS :-)

Wed Jan 31 03:25:51 UTC 2007  Krishnakumar B  <kitty@nospam.invalid.domain>

        * ace/High_Res_Timer.h:

          Removed the special case default definition of
          ACE_HR_SCALE_CONVERSION to ACE_ONE_SECOND_IN_MSECS on Windows;
          added a #ifndef around the default definition in case the user
          wishes to change it.  This was done to prevent useless values
          like 0 showing up in calculations using ACE_Basic_Stats when the
          time intervals are of the order of a few microseconds.  Most of
          the current machines have a QueryPerformanceCounter()
          implementation that returns a value of atleast 3 MHz.  So it
          should be completely safe to use the definition of
          ACE_ONE_SECOND_IN_USECS as the default value for